@@ -8,6 +8,14 @@
 	(msp430_elf_relax_add_two_words): Likewise.
 	(msp430_elf_relax_section): Likewise.
 
+	2020-02-10  Jozef Lawrynowicz  <jozef.l@mittosystems.com>
+	* elf32-msp430.c (msp430_elf_relax_add_two_words): Rename to
+	msp430_elf_relax_add_words. Support insertion of either one or two
+	words.
+	(msp430_elf_relax_section): Catch opcode of 0x3c00 when relocation
+	needs to be grown. Handle insertion of branch instruction to replace
+	jump.
+
 2020-02-01  Nick Clifton  <nickc@redhat.com>
 
 	* development.sh: Set development to true.
